// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SilenceComment /> Matches snapshot when collapsed 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
        — me@example.com
      </span>
      <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
        <span class=\\"badge bg-light components-label\\">
          Expires in 30 minutes
        </span>
      </div>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when collapsed and multiple clusters are present 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
        — me@example.com
      </span>
      <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
        <span class=\\"badge bg-light components-label\\">
          Expires in 30 minutes
        </span>
        <span class=\\"badge bg-secondary mx-1 components-label\\">
          ha
        </span>
      </div>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment \\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden \\">
        — me@example.com
      </span>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded and multiple clusters are present 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7l-87.5-68.6c.5-1.7 .7-3.5 .7-5.4c0-27.6-11-54.1-30.5-73.7L512 320c-20.5-20.5-32-48.3-32-77.3V208c0-77.4-55-142-128-156.8V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V51.2c-42.6 8.6-79 34.2-102 69.3L38.8 5.1zM160 242.7c0 29-11.5 56.8-32 77.3l-1.5 1.5C107 341 96 367.5 96 395.2c0 11.5 9.3 20.8 20.8 20.8H406.2L160 222.1v20.7zM384 448H320 256c0 17 6.7 33.3 18.7 45.3s28.3 18.7 45.3 18.7s33.3-6.7 45.3-18.7s18.7-28.3 18.7-45.3z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment \\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden \\">
        — me@example.com
      </span>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;
